# qalita-core

./: LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
qalita_core/: __init__.py  aggregation.py  data_source_opener.py  pack.py  pandas_sanitization.py  utils.py
tests/: test_chunk_parquet.py  test_pack.py  test_utils.py
tests/data/: .agent  source_conf.json  target_conf.json
